--- a/clientside/style.css
+++ b/clientside/style.css
@@ -1,27 +1,5 @@
-#table {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  #table td, #table th {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-  
-  #table tr:nth-child(even){background-color: #f2f2f2;}
-  
-  #table tr:hover {background-color: #ddd;}
-  
-  #table th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: rgb(36, 36, 141);
-    color: white;
-  }
-
-  input[type=text], select {
+input[type=text],
+select {
     width: 40%;
     padding: 5px 10px;
     margin: 8px 8px;
@@ -29,9 +7,10 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-  }
-  
-  input[type=date], select {
+}
+
+input[type=date],
+select {
     width: 40%;
     padding: 5px 10px;
     margin: 8px 8px;
@@ -39,9 +18,9 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-  }
+}
 
-  input[type=button] {
+input[type=button] {
     width: 10%;
     background-color: rgb(194, 120, 51);
     color: white;
@@ -50,11 +29,40 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
-  }
-  input[type=button]:hover {
-    background-color: rgb(153, 82, 16);
-  }
+}
 
-  .notes{
+input[type=button]:hover {
+    background-color: rgb(153, 82, 16);
+}
+
+#table {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#table td,
+#table th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#table tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#table tr:hover {
+    background-color: #ddd;
+}
+
+#table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: rgb(153, 82, 16);
+    color: white;
+}
+
+.notes {
     display: none;
-  }
+}
