--- a/clientside/style.css
+++ b/clientside/style.css
@@ -1,66 +1,399 @@
-input[type=text],
-select {
-    width: 40%;
-    padding: 5px 10px;
-    margin: 8px 8px;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+html {
     box-sizing: border-box;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+    overflow-x: hidden
 }
 
-input[type=date],
-select {
-    width: 40%;
-    padding: 5px 10px;
-    margin: 8px 8px;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
+*,
+*:before,
+*:after {
+    box-sizing: inherit
 }
 
-input[type=button] {
-    width: 10%;
-    background-color: rgb(194, 120, 51);
-    color: white;
-    padding: 5px 10px;
-    margin: 8px 8px;
+body {
+    margin: 0
+}
+
+header,
+nav {
+    display: block
+}
+
+a {
+    background-color: transparent
+}
+
+a:active,
+a:hover {
+    outline-width: 0
+}
+
+img {
+    border-style: none
+}
+
+button,
+input,
+select,
+textarea {
+    font: inherit;
+    margin: 0
+}
+
+button,
+input {
+    overflow: visible
+}
+
+button,
+select {
+    text-transform: none
+}
+
+button,
+[type=button],
+[type=reset],
+[type=submit] {
+    -webkit-appearance: button
+}
+
+button::-moz-focus-inner,
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
+    border-style: none;
+    padding: 0
+}
+
+button:-moz-focusring,
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
+    outline: 1px dotted ButtonText
+}
+
+textarea {
+    overflow: auto
+}
+
+[type=checkbox] {
+    padding: 0
+}
+
+
+/* End extract */
+
+html,
+body {
+    font-family: Verdana, sans-serif;
+    font-size: 15px;
+    line-height: 1.5
+}
+
+.w3-serif {
+    font-family: serif
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Raleway", Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    margin: 10px 0
+}
+
+hr {
+    border: 0;
+    border-top: 1px solid #eee;
+    margin: 20px 0;
+    box-sizing: content-box;
+    height: 0;
+    overflow: visible
+}
+
+img {
+    vertical-align: middle
+}
+
+a {
+    color: inherit
+}
+
+.my-button {
     border: none;
-    border-radius: 4px;
+    display: inline-block;
+    padding: 8px 16px;
+    vertical-align: middle;
+    overflow: hidden;
+    text-decoration: none;
+    color: inherit;
+    background-color: inherit;
+    text-align: center;
     cursor: pointer;
+    white-space: nowrap
 }
 
-input[type=button]:hover {
-    background-color: rgb(153, 82, 16);
+.my-button {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none
 }
 
-#table {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
+.my-button:disabled {
+    cursor: not-allowed;
+    opacity: 0.3
 }
 
-#table td,
-#table th {
-    border: 1px solid #ddd;
+.my-input {
     padding: 8px;
+    display: block;
+    border: none;
+    border-bottom: 1px solid #ccc;
+    width: 100%
 }
 
-#table tr:nth-child(even) {
-    background-color: #f2f2f2;
+.my-sidebar {
+    height: 100%;
+    width: 200px;
+    background-color: #fff;
+    position: fixed!important;
+    z-index: 1;
+    overflow: auto
 }
 
-#table tr:hover {
-    background-color: #ddd;
+.my-main,
+#main {
+    transition: margin-left .4s
 }
 
-#table th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: rgb(153, 82, 16);
-    color: white;
+.my-bar {
+    width: 100%;
+    overflow: hidden
+}
+
+.my-bar .my-bar-item {
+    padding: 8px 16px;
+    float: left;
+    width: auto;
+    border: none;
+    display: block;
+    outline: 0
+}
+
+.my-bar .my-button {
+    white-space: normal
+}
+
+.my-block {
+    display: block;
+    width: 100%
+}
+
+.my-container:after,
+.my-container:before,
+.my-bar:before,
+.my-bar:after {
+    content: "";
+    display: table;
+    clear: both
+}
+
+.content {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 980px
+}
+
+.my-right {
+    float: right!important
+}
+
+@media (min-width:993px) {
+    .my-hide-large {
+        display: none!important
+    }
+    .my-sidebar.my-collapse {
+        display: block!important
+    }
+}
+
+@media (max-width:992px) {
+    .my-sidebar.my-collapse {
+        display: none
+    }
+    .my-main {
+        margin-left: 0!important;
+        margin-right: 0!important
+    }
+}
+
+.my-top {
+    position: fixed;
+    width: 100%;
+    z-index: 1
+}
+
+.my-top {
+    top: 0
+}
+
+.my-overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2
+}
+
+.my-display-topright {
+    position: absolute;
+    right: 0;
+    top: 0
+}
+
+.my-container {
+    padding: 0.01em 16px
+}
+
+@keyframes fading {
+    0% {
+        opacity: 0
+    }
+    50% {
+        opacity: 1
+    }
+    100% {
+        opacity: 0
+    }
+}
+
+@keyframes opac {
+    from {
+        opacity: 0
+    }
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0
+    }
+    to {
+        top: 0;
+        opacity: 1
+    }
+}
+
+@keyframes animateleft {
+    from {
+        left: -300px;
+        opacity: 0
+    }
+    to {
+        left: 0;
+        opacity: 1
+    }
+}
+
+@keyframes animateright {
+    from {
+        right: -300px;
+        opacity: 0
+    }
+    to {
+        right: 0;
+        opacity: 1
+    }
+}
+
+@keyframes animatebottom {
+    from {
+        bottom: -300px;
+        opacity: 0
+    }
+    to {
+        bottom: 0;
+        opacity: 1
+    }
+}
+
+@keyframes animatezoom {
+    from {
+        transform: scale(0)
+    }
+    to {
+        transform: scale(1)
+    }
+}
+
+.my-xlarge {
+    font-size: 24px!important
+}
+
+.my-left-align {
+    text-align: left!important
+}
+
+.my-border {
+    border: 1px solid #ccc!important
+}
+
+.border-left {
+    border-left: 1px solid #ccc!important
+}
+
+.border-right {
+    border-right: 1px solid #ccc!important
+}
+
+.my-padding-16 {
+    padding-top: 16px!important;
+    padding-bottom: 16px!important
+}
+
+.my-button:hover {
+    color: #000!important;
+    background-color: #ccc!important
+}
+
+.my-transparent {
+    background-color: transparent!important
+}
+
+.my-green {
+    color: #fff!important;
+    background-color: #4CAF50!important
+}
+
+.my-white {
+    color: #000!important;
+    background-color: #fff!important
+}
+
+.my-black {
+    color: #fff!important;
+    background-color: #000!important
+}
+
+.my-light-grey,
+.my-light-gray {
+    color: #000!important;
+    background-color: #f1f1f1!important
 }
 
 .notes {
